--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -33,6 +33,7 @@
     <header class="flex">
       <div class="container flex items-center justify-between gap-1">
         <a href="/"><img src="/images/shared/logo.png" alt="Shutter Journey logo" class="logo" /></a>
+
         <nav class="header__nav">
           <ul class="flex flex-auto-dir items-center gap-2">
             <li><a href="/" class="link-hover">Home</a></li>
@@ -41,6 +42,7 @@
             <li><a href="/pages/contact/" class="link-hover">Contact</a></li>
           </ul>
         </nav>
+
         <button class="btn-burger btn" aria-expanded="false">
           <i class="bx bx-menu bx-sm"></i>
           <span class="sr-only">Menu</span>
@@ -92,7 +94,7 @@
 
             <div id="panel1-content" aria-hidden="true" aria-labelledby="panel1-heading" class="accordion__content grid">
               <div class="overflow-hidden">
-                <p>I aim to share fresh content regularly, at least once a week. Stay tuned for exciting new photography insights!</p>
+                <p class="accordion__content__body">I aim to share fresh content regularly, at least once a week. Stay tuned for exciting new photography insights!</p>
               </div>
             </div>
           </li>
@@ -107,7 +109,7 @@
 
             <div id="panel2-content" aria-hidden="true" aria-labelledby="panel2-heading" class="accordion__content grid">
               <div class="overflow-hidden">
-                <p>Yes, absolutely! Feel free to share my content and help it reach a wider audience. Thanks for spreading the word!</p>
+                <p class="accordion__content__body">Yes, absolutely! Feel free to share my content and help it reach a wider audience. Thanks for spreading the word!</p>
               </div>
             </div>
           </li>
@@ -122,7 +124,7 @@
 
             <div id="panel3-content" aria-hidden="true" aria-labelledby="panel3-heading" class="accordion__content grid">
               <div class="overflow-hidden">
-                <p>Yes, I offer photography coaching! Feel free to reach out via the contact page for more details.</p>
+                <p class="accordion__content__body">Yes, I offer photography coaching! Feel free to reach out via the contact page for more details.</p>
               </div>
             </div>
           </li>
@@ -137,7 +139,7 @@
 
             <div id="panel4-content" aria-hidden="true" aria-labelledby="panel4-heading" class="accordion__content grid">
               <div class="overflow-hidden">
-                <p>Yes, I'm always open to exciting collaborations! If you have ideas or proposals, hit me up through the contact page!</p>
+                <p class="accordion__content__body">Yes, I'm always open to exciting collaborations! If you have ideas or proposals, hit me up through the contact page!</p>
               </div>
             </div>
           </li>
@@ -147,58 +149,58 @@
       <section class="instagram">
         <h2 class="container mb-2 text-center">Follow <a href="#" class="underline">@shutterjourney</a> on Instagram!</h2>
 
-        <ul class="instagram-feed grid">
+        <ul class="instagram__feed grid">
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-1.jpg" alt="Turquoise waters of Lake Louise, Canada on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-2.jpg" alt="Black metal bridge under gray clouds in Copenhagen, Denmark on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-3.jpg" alt="Foggy mountains in Alaska, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-4.jpg" alt="Train traveling in city at night in Chicago, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-5.jpg" alt="Wooden house near Emerald Lake, Canada during winter on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-6.jpg" alt="Old brown church under stary night on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-7.jpg" alt="Wet streets of New York, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-8.jpg" alt="Drone shot of a river in British Columbia, Canada on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
