--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -33,6 +33,7 @@
     <header class="flex">
       <div class="container flex items-center justify-between gap-1">
         <a href="/"><img src="/images/shared/logo.png" alt="Shutter Journey logo" class="logo" /></a>
+
         <nav class="header__nav">
           <ul class="flex flex-auto-dir items-center gap-2">
             <li><a href="/" class="link-hover">Home</a></li>
@@ -41,6 +42,7 @@
             <li><a href="/pages/contact/" class="link-hover current" aria-current="page">Contact</a></li>
           </ul>
         </nav>
+
         <button class="btn-burger btn" aria-expanded="false">
           <i class="bx bx-menu bx-sm"></i>
           <span class="sr-only">Menu</span>
@@ -64,30 +66,30 @@
           <form name="contact">
             <label for="name">Name <span class="text-red">*</span></label>
             <div class="relative">
-              <input type="text" id="name" name="name" placeholder="Name" aria-describedby="name-error" />
+              <input type="text" id="name" name="name" placeholder="Name" />
               <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
-              <p id="name-error" role="alert" class="input__error-message text-sm text-red hidden">Name must be at least 5 characters</p>
+              <p class="input__error-message text-sm text-red hidden">Name must be at least 5 characters</p>
             </div>
 
             <label for="email">Email <span class="text-red">*</span></label>
             <div class="relative">
-              <input type="email" id="email" name="email" placeholder="email@example.com" aria-describedby="email-error" />
+              <input type="email" id="email" name="email" placeholder="email@example.com" />
               <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
-              <p id="email-error" role="alert" class="input__error-message text-sm text-red hidden">Please enter a valid email address</p>
+              <p class="input__error-message text-sm text-red hidden">Please enter a valid email address</p>
             </div>
 
             <label for="subject">Subject <span class="text-red">*</span></label>
             <div class="relative">
-              <input type="text" id="subject" name="subject" placeholder="Subject" aria-describedby="subject-error" />
+              <input type="text" id="subject" name="subject" placeholder="Subject" />
               <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
-              <p id="subject-error" role="alert" class="input__error-message text-sm text-red hidden">Subject must be at least 15 characters</p>
+              <p class="input__error-message text-sm text-red hidden">Subject must be at least 15 characters</p>
             </div>
 
             <label for="message">Message <span class="text-red">*</span></label>
             <div class="relative">
-              <textarea id="message" name="message" placeholder="Message" aria-describedby="message-error"></textarea>
+              <textarea id="message" name="message" placeholder="Message"></textarea>
               <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
-              <p id="message-error" role="alert" class="input__error-message text-sm text-red hidden">Message must be at least 25 characters</p>
+              <p class="input__error-message text-sm text-red hidden">Message must be at least 25 characters</p>
             </div>
 
             <input type="submit" value="Send message" class="btn btn-dark" />
@@ -138,58 +140,58 @@
       <section class="instagram">
         <h2 class="container mb-2 text-center">Follow <a href="#" class="underline">@shutterjourney</a> on Instagram!</h2>
 
-        <ul class="instagram-feed grid">
+        <ul class="instagram__feed grid">
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-1.jpg" alt="Turquoise waters of Lake Louise, Canada on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-2.jpg" alt="Black metal bridge under gray clouds in Copenhagen, Denmark on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-3.jpg" alt="Foggy mountains in Alaska, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-4.jpg" alt="Train traveling in city at night in Chicago, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-5.jpg" alt="Wooden house near Emerald Lake, Canada during winter on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-6.jpg" alt="Old brown church under stary night on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-7.jpg" alt="Wet streets of New York, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram-feed__link relative block">
+            <a href="#" class="instagram__feed__link relative block">
               <img src="/images/shared/instagram/ig-8.jpg" alt="Drone shot of a river in British Columbia, Canada on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
