Minor improvement to screen reader only text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="flex gap-0-5">
             <button class="carousel__btn-prev btn btn-dark">
               <i class="bx bx-chevron-left bx-md"></i>
-              <span class="sr-only">Prev slide</span>
+              <span class="sr-only">Previous slide</span>
             </button>
 
             <button class="carousel__btn-next btn btn-dark">
