Moved instagram feed inside the footer

--- a/index.html
+++ b/index.html
@@ -155,114 +155,116 @@
 
         <div><img src="/images/home/newsletter.jpg" alt="Silhouette of a person standing on a rock during sunset" /></div>
       </section>
+    </main>
 
-      <section class="instagram">
+    <footer>
+      <div class="footer__top">
         <h2 class="container mb-2 text-center">Follow <a href="#" class="underline">@shutterjourney</a> on Instagram!</h2>
 
-        <ul class="instagram__feed grid">
+        <ul class="footer__instagram grid">
           <li class="overflow-hidden">
-            <a href="#" class="instagram__feed__link relative block">
+            <a href="#" class="footer__instagram__link relative block">
               <img src="/images/shared/instagram/ig-1.jpg" alt="Turquoise waters of Lake Louise, Canada on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram__feed__link relative block">
+            <a href="#" class="footer__instagram__link relative block">
               <img src="/images/shared/instagram/ig-2.jpg" alt="Black metal bridge under gray clouds in Copenhagen, Denmark on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram__feed__link relative block">
+            <a href="#" class="footer__instagram__link relative block">
               <img src="/images/shared/instagram/ig-3.jpg" alt="Foggy mountains in Alaska, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram__feed__link relative block">
+            <a href="#" class="footer__instagram__link relative block">
               <img src="/images/shared/instagram/ig-4.jpg" alt="Train traveling in city at night in Chicago, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram__feed__link relative block">
+            <a href="#" class="footer__instagram__link relative block">
               <img src="/images/shared/instagram/ig-5.jpg" alt="Wooden house near Emerald Lake, Canada during winter on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram__feed__link relative block">
+            <a href="#" class="footer__instagram__link relative block">
               <img src="/images/shared/instagram/ig-6.jpg" alt="Old brown church under stary night on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram__feed__link relative block">
+            <a href="#" class="footer__instagram__link relative block">
               <img src="/images/shared/instagram/ig-7.jpg" alt="Wet streets of New York, United States on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
 
           <li class="overflow-hidden">
-            <a href="#" class="instagram__feed__link relative block">
+            <a href="#" class="footer__instagram__link relative block">
               <img src="/images/shared/instagram/ig-8.jpg" alt="Drone shot of a river in British Columbia, Canada on Instagram" />
               <i class="bx bxl-instagram bx-md absolute grid place-items-center"></i>
             </a>
           </li>
         </ul>
-      </section>
-    </main>
+      </div>
 
-    <footer>
-      <div class="footer__container container grid place-items-center gap-1">
-        <img src="/images/shared/logo.png" alt="Shutter Journey logo" class="logo" />
+      <div class="footer__bottom">
+        <div class="footer__container container grid place-items-center gap-1">
+          <img src="/images/shared/logo.png" alt="Shutter Journey logo" class="logo" />
 
-        <nav class="footer__nav">
-          <ul class="flex flex-auto-dir items-center gap-1-5">
-            <li><a href="/" class="link-hover">Home</a></li>
-            <li><a href="/pages/blog/" class="link-hover">Blog</a></li>
-            <li><a href="/pages/about/" class="link-hover">About</a></li>
-            <li><a href="/pages/contact/" class="link-hover">Contact</a></li>
+          <nav class="footer__nav">
+            <ul class="flex flex-auto-dir items-center gap-1-5">
+              <li><a href="/" class="link-hover">Home</a></li>
+              <li><a href="/pages/blog/" class="link-hover">Blog</a></li>
+              <li><a href="/pages/about/" class="link-hover">About</a></li>
+              <li><a href="/pages/contact/" class="link-hover">Contact</a></li>
+            </ul>
+          </nav>
+
+          <ul class="footer__icons flex items-center gap-1-5">
+            <li>
+              <a href="#" class="link-hover">
+                <i class="bx bxl-facebook-square"></i>
+                <span class="sr-only">Facebook</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="link-hover">
+                <i class="bx bxl-instagram"></i>
+                <span class="sr-only">Instagram</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="link-hover">
+                <i class="bx bxl-twitter"></i>
+                <span class="sr-only">Twitter</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="link-hover">
+                <i class="bx bxl-pinterest"></i>
+                <span class="sr-only">Pinterest</span>
+              </a>
+            </li>
           </ul>
-        </nav>
 
-        <ul class="footer__icons flex items-center gap-1-5">
-          <li>
-            <a href="#" class="link-hover">
-              <i class="bx bxl-facebook-square"></i>
-              <span class="sr-only">Facebook</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="link-hover">
-              <i class="bx bxl-instagram"></i>
-              <span class="sr-only">Instagram</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="link-hover">
-              <i class="bx bxl-twitter"></i>
-              <span class="sr-only">Twitter</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="link-hover">
-              <i class="bx bxl-pinterest"></i>
-              <span class="sr-only">Pinterest</span>
-            </a>
-          </li>
-        </ul>
-
-        <p class="footer__copytext">&copy; 2024 Shutter Journey</p>
+          <p class="footer__copyright">&copy; 2024 Shutter Journey</p>
+        </div>
       </div>
     </footer>
   </body>
