--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
 
-        <ul class="carousel__track relative min-h-200 mb-2 grid gap-1">
+        <ul class="carousel__container relative min-h-200 mb-2 grid gap-1">
           <li>
             <div class="loading-spinner absolute rounded-full"></div>
           </li>
