Minor adjustments to the accordions

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -85,14 +85,14 @@
 
         <ul class="faq__accordions grid gap-1">
           <li class="accordion__panel">
-            <h3 id="panel1-heading">
-              <button aria-expanded="false" aria-controls="panel1-content" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
+            <h3>
+              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
                 <span>How often do you post new content?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
             </h3>
 
-            <div id="panel1-content" aria-hidden="true" aria-labelledby="panel1-heading" class="accordion__content grid">
+            <div class="accordion__content grid">
               <div class="overflow-hidden">
                 <p class="accordion__content__body">I aim to share fresh content regularly, at least once a week. Stay tuned for exciting new photography insights!</p>
               </div>
@@ -100,14 +100,14 @@
           </li>
 
           <li class="accordion__panel">
-            <h3 id="panel2-heading">
-              <button aria-expanded="false" aria-controls="panel2-content" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
+            <h3>
+              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
                 <span>Can I share your content on social media?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
             </h3>
 
-            <div id="panel2-content" aria-hidden="true" aria-labelledby="panel2-heading" class="accordion__content grid">
+            <div class="accordion__content grid">
               <div class="overflow-hidden">
                 <p class="accordion__content__body">Yes, absolutely! Feel free to share my content and help it reach a wider audience. Thanks for spreading the word!</p>
               </div>
@@ -115,31 +115,31 @@
           </li>
 
           <li class="accordion__panel">
-            <h3 id="panel3-heading">
-              <button aria-expanded="false" aria-controls="panel3-content" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
+            <h3>
+              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
                 <span>Do you offer photography coaching?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
             </h3>
 
-            <div id="panel3-content" aria-hidden="true" aria-labelledby="panel3-heading" class="accordion__content grid">
+            <div class="accordion__content grid">
               <div class="overflow-hidden">
-                <p class="accordion__content__body">Yes, I offer photography coaching! Feel free to reach out via the contact page for more details.</p>
+                <p class="accordion__content__body">I do offer photography coaching! If you're interested, feel free to reach out via the contact page for more information.</p>
               </div>
             </div>
           </li>
 
           <li class="accordion__panel">
-            <h3 id="panel4-heading">
-              <button aria-expanded="false" aria-controls="panel4-content" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
+            <h3>
+              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
                 <span>Are you open for collaborations?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
             </h3>
 
-            <div id="panel4-content" aria-hidden="true" aria-labelledby="panel4-heading" class="accordion__content grid">
+            <div class="accordion__content grid">
               <div class="overflow-hidden">
-                <p class="accordion__content__body">Yes, I'm always open to exciting collaborations! If you have ideas or proposals, hit me up through the contact page!</p>
+                <p class="accordion__content__body">Absolutely, I'm always open to exciting collaborations! If you have ideas or proposals, hit me up through the contact page!</p>
               </div>
             </div>
           </li>
