Improved the featured post

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="container">
           <h2 class="mb-2 border-bottom">Featured post</h2>
 
-          <div class="featured-post__container min-h-200 grid place-items-center gap-2">
+          <div class="featured-post__container min-h-200 flex">
             <div class="loading-spinner rounded-full"></div>
           </div>
         </div>
