Fixed contact image stretching bug

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -83,7 +83,7 @@
           </form>
         </div>
 
-        <img src="/images/contact/reach-out.jpg" alt="Silhouette of a photographer raising a camera in hand against a sunset" class="card" />
+        <img src="/images/contact/reach-out.jpg" alt="Person standing near a guardrail, taking a photo of a sunset" class="reach-out__image card" />
       </section>
 
       <section class="card container fluid-padding flex flex-wrap items-center justify-between gap-2">
