Minor adjustment to home page hero

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-      <section class="hero home-hero grid">
+      <section class="hero home-hero grid place-items-center">
         <img src="/images/home/home-hero.jpg" alt="A Sony camera placed in a field with brownish-yellow grass" class="home-hero__image" />
 
         <div class="home-hero__content flow">
