Minor adjustment to the carousel

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </section>
 
-      <section class="container">
+      <section class="container overflow-hidden">
         <div class="mb-2 border-bottom flex items-center justify-between">
           <h2>Latest posts</h2>
 
