Attempting to fix IOS bug

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-      <section class="hero home-hero grid place-items-center">
+      <!-- <section class="hero home-hero grid place-items-center">
         <img src="/images/home/home-hero.jpg" alt="A Sony camera placed in a field with brownish-yellow grass" class="home-hero__image" />
 
         <div class="home-hero__content flow">
@@ -45,9 +45,9 @@
           <p class="home-hero__body">Discover gear, guides, and captivating locations with Shutter Journey - your visual storytelling companion. Embark on your journey now!</p>
           <a href="/pages/blog/" class="btn btn-light">Explore now</a>
         </div>
-      </section>
+      </section> -->
 
-      <section class="container overflow-hidden">
+      <section class="container">
         <div class="mb-2 border-bottom flex items-center justify-between">
           <h2>Latest posts</h2>
 
