Minor adjustment to fix IOS bug

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="overflow-hidden">
       <section class="hero home-hero grid place-items-center">
         <img src="/images/home/home-hero.jpg" alt="A Sony camera placed in a field with brownish-yellow grass" class="home-hero__image" />
 
@@ -47,7 +47,7 @@
         </div>
       </section>
 
-      <!-- <section class="container">
+      <section class="container">
         <div class="mb-2 border-bottom flex items-center justify-between">
           <h2>Latest posts</h2>
 
@@ -107,7 +107,7 @@
             </button>
           </li>
         </ul>
-      </section> -->
+      </section>
 
       <section class="featured-post">
         <div class="container">
