--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="/js/hotjar/hotjar.js"></script>
   </head>
   <body>
-    <header>
-      <div class="header__container container flex items-center justify-between gap-1">
+    <header class="flex">
+      <div class="container flex items-center justify-between gap-1">
         <a href="/"><img src="/images/shared/logo.png" alt="Shutter Journey logo" class="logo" /></a>
 
         <nav class="header__nav">
@@ -36,7 +36,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="overflow-hidden">
       <section class="hero home-hero grid place-items-center">
         <img src="/images/home/home-hero.jpg" alt="A Sony camera placed in a field with brownish-yellow grass" class="home-hero__image" />
 
