--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="/js/hotjar/hotjar.js"></script>
   </head>
   <body>
-    <header class="flex">
-      <div class="container flex items-center justify-between gap-1">
+    <header>
+      <div class="header__container container flex items-center justify-between gap-1">
         <a href="/"><img src="/images/shared/logo.png" alt="Shutter Journey logo" class="logo" /></a>
 
         <nav class="header__nav">
@@ -36,7 +36,7 @@
       </div>
     </header>
 
-    <main class="overflow-hidden">
+    <main>
       <section class="hero home-hero grid place-items-center">
         <img src="/images/home/home-hero.jpg" alt="A Sony camera placed in a field with brownish-yellow grass" class="home-hero__image" />
 
@@ -48,7 +48,7 @@
       </section>
 
       <section class="container">
-        <div class="mb-2 border-bottom flex items-center justify-between">
+        <div class="mb-2 border-bottom flex items-center justify-between gap-1">
           <h2>Latest posts</h2>
 
           <div class="flex gap-0-5">
