More IOS testing

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
           </div>
         </div>
 
-        <!-- <ul class="carousel__container relative min-h-200 mb-2 grid gap-1">
+        <ul class="carousel__container relative min-h-200 mb-2 grid gap-1">
           <li>
             <div class="loading-spinner absolute rounded-full"></div>
           </li>
-        </ul> -->
+        </ul>
 
         <ul class="carousel__pagination hidden justify-center gap-0-5">
           <li>
