--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -54,7 +54,7 @@
             <div class="relative">
               <input type="text" id="name" name="name" placeholder="Name" />
               <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
-              <p class="input__error-message text-sm text-red hidden">Name must be at least 5 characters</p>
+              <p class="input__error-message text-sm text-red hidden">Name must be more than 5 characters</p>
             </div>
 
             <label for="email">Email <span class="text-red">*</span></label>
@@ -68,14 +68,14 @@
             <div class="relative">
               <input type="text" id="subject" name="subject" placeholder="Subject" />
               <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
-              <p class="input__error-message text-sm text-red hidden">Subject must be at least 15 characters</p>
+              <p class="input__error-message text-sm text-red hidden">Subject must be more than 15 characters</p>
             </div>
 
             <label for="message">Message <span class="text-red">*</span></label>
             <div class="relative">
               <textarea id="message" name="message" placeholder="Message"></textarea>
               <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
-              <p class="input__error-message text-sm text-red hidden">Message must be at least 25 characters</p>
+              <p class="input__error-message text-sm text-red hidden">Message must be more than 25 characters</p>
             </div>
 
             <input type="submit" value="Send message" class="btn btn-dark" />
@@ -95,28 +95,28 @@
         <ul class="flex flex-wrap gap-1">
           <li>
             <a href="#" class="btn btn-dark">
-              <i class="bx bxl-facebook text-medium"></i>
+              <i class="bx bxl-facebook text-md"></i>
               <span>Facebook</span>
             </a>
           </li>
 
           <li>
             <a href="#" class="btn btn-dark">
-              <i class="bx bxl-instagram text-medium"></i>
+              <i class="bx bxl-instagram text-md"></i>
               <span>Instagram</span>
             </a>
           </li>
 
           <li>
             <a href="#" class="btn btn-dark">
-              <i class="bx bxl-twitter text-medium"></i>
+              <i class="bx bxl-twitter text-md"></i>
               <span>Twitter</span>
             </a>
           </li>
 
           <li>
             <a href="#" class="btn btn-dark">
-              <i class="bx bxl-pinterest-alt text-medium"></i>
+              <i class="bx bxl-pinterest-alt text-md"></i>
               <span>Pinterest</span>
             </a>
           </li>
