Minor adjustment to a utility class

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -72,7 +72,7 @@
         <ul class="faq__accordions grid gap-1">
           <li class="accordion__panel">
             <h3>
-              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
+              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-md cursor-pointer rounded-corners">
                 <span>How often do you post new content?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
@@ -87,7 +87,7 @@
 
           <li class="accordion__panel">
             <h3>
-              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
+              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-md cursor-pointer rounded-corners">
                 <span>Can I share your content on social media?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
@@ -102,7 +102,7 @@
 
           <li class="accordion__panel">
             <h3>
-              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
+              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-md cursor-pointer rounded-corners">
                 <span>Do you offer photography coaching?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
@@ -117,7 +117,7 @@
 
           <li class="accordion__panel">
             <h3>
-              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
+              <button aria-expanded="false" class="accordion__header flex items-center justify-between gap-1 text-md cursor-pointer rounded-corners">
                 <span>Are you open for collaborations?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
