--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </li>
         </ul>
 
-        <ul class="carousel__pagination hidden justify-center gap-0-5">
+        <ul class="carousel__pagination justify-center gap-0-5 hidden">
           <li>
             <button class="carousel__pagination__btn cursor-pointer rounded-full pagination-current">
               <span class="sr-only">Slide 1</span>
